# books-to-scrape-crawler

./: README.md  logger.py  main.py  main1.py  pagination_scrap.py  pyproject.toml  sync_fetch.py
scraped_data/: scraped_data_2025-05-29 15:28:08.209933.json  scraped_data_2025-05-29 15:28:35.804694.json  scraped_data_2025-05-29 15:29:23.779015.json  scraped_data_2025-05-29 15:36:58.604311.json
