[project]
name = "day1-2-hands-on-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.7",
    "beautifulsoup4>=4.13.4",
    "flake8>=7.2.0",
    "lxml>=5.4.0",
    "pylint>=3.3.7",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
]
